# amhe_cec

./: CMakeLists.txt  README.md  pyproject.toml
src/amhe_cec/: __init__.py  _amhe_cec_impl.pyi  benchmark.py
src/cpp/: benchmark_handle.h  bindings.cpp  cec2005.cpp  cec2005.h  cec2005_allocate.cpp  common.h  create_benchmark.h  global.h
src/cpp/cec2005/: basic.cpp  cec2005.h  cec2005_allocate.cpp  global.h  gradients.cpp  implementations.cpp  inits.cpp  misc.cpp  rand.cpp  rand.h  sub.h
src/cpp/cec2017/: Compare_fast  Compare_fast.cpp  Compare_slow  Compare_slow.cpp  Improve_percent.txt  cec17_test_fast_pow.cpp  cec17_test_func.cpp  cec2017.h  compile and run.txt  gradients.cpp  implementations.cpp  time_complexity_fast.txt  time_complexity_slow.txt
test/: test_ackley.py  test_api.py  test_f1.py  test_gradient_numerical.py  test_known.py  test_sgd_adam_slow.py
