[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "amhe_cec"
version = "0.0.1"
description = "CEC functions with gradient."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Tomasz Sroka", email = "01169239@pw.edu.pl" },
    { name = "Krzysztof Stawarski", email = "12345678@pw.edu.pl" },
]
classifiers = [
    "MIT",
]
[project.urls]
Homepage = "https://github.com/tsroka/amhe_cec"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
